# rusty-esp32-cam

./: .gitignore  Cargo.toml  README.md  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
src/: camera.rs  main.rs
