[package]
name = "rusty-esp32-cam"
version = "0.1.0"
authors = ["Lukasz Kielar <31779738+lukaszKielar@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rusty-esp32-cam"
# do not use the built in cargo test harness -> resolve rust-analyzer errors
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
toml-cfg = "0.2"
anyhow = "1"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.15" }
bindings_header = "components/bindings.h"
bindings_module = "c_camera"
